# flet-storage-cookbook

./: README.md  main.py  pyproject.toml
.github/workflows/: desktop-and-mobile-builds.yml
