[project]
name = "example-app"
version = "0.1.0"
description = "A Flet example application."
requires-python = ">=3.9"
authors = [
    { name = "TheEthicalBoy", email = "me@example.com" }
]

dependencies = [
  "flet==0.27.4",
]

[tool.flet]
company = "Flet"
bundle_id = "com.flet.example-app"

[tool.poetry]
package-mode = false

[tool.flet.app]
path = "."

